--- a/octofit-tracker/frontend/package.json
+++ b/octofit-tracker/frontend/package.json
@@ -37,5 +37,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://obscure-broccoli-6r7xxgx56vh5w6g-8000.app.github.dev"
 }
